Fix `text-align` in Houses Landing
- Main title was wrapping and aligned left on narrower views

--- a/src/app/pages/Houses/sections/Landing.module.scss
+++ b/src/app/pages/Houses/sections/Landing.module.scss
@@ -4,9 +4,9 @@
 	display: grid;
 	place-content: center;
 	row-gap: 20px;
+	text-align: center;
 
-	& > * {
-		display: grid;
+	* {
 		place-self: center;
 	}
 
